--- a/public/views/form-education.html
+++ b/public/views/form-education.html
@@ -8,39 +8,29 @@
     </div>
 
     <div class="col-xs-9 panel-default">
-      <div class="panel-heading">INCOME</div>
+      <div class="panel-heading">Education</div>
       <div class="panel-body">
-<h1>Income 8</h1>
-Adult Income
-For EACH adult in the household that earns income, please report it below.
-ADULTS IN HOUSEHOLD
-Jacob Smith Johanna Smith
-INCOME REPORTED FOR ADULT
-$400 $1000
-FREQUENCY
-Bi-Weekly Monthly
-Edit Edit
-X Remove X Remove
+<h1>Education</h1>
+
 
 
 <div class="form-group row">
 <div class="inline-block">
   	<div class="clearfix"> 
 			<div class="btn-group inline pull-right" data-toggle="buttons-checkbox">
-			<a ui-sref="form.income7" class="btn btn-info">
+			<a ui-sref="#" class="btn btn-info">
       		<span class="glyphicon glyphicon glyphicon-backward"></span>Back</a>
 
 			<a ui-sref="#" class="btn btn-info">
 			Save<span class="glyphicon glyphicon glyphicon-save"></span>
 			</a>
-			<a ui-sref="form.income9" class="btn btn-info">
-			Continue<span class="glyphicon glyphicon-forward"></span>
+			<a ui-sref="#" class="btn btn-info">
+			Submit<span class="glyphicon glyphicon-ok-sign"></span>
 			</a>
 		</div>
 	</div>
 	</div>
 </div>
-
   </div>
       </div>
     </div>
