--- a/public/views/form-healthcare.html
+++ b/public/views/form-healthcare.html
@@ -8,30 +8,21 @@
     </div>
 
     <div class="col-xs-9 panel-default">
-      <div class="panel-heading">INCOME</div>
+      <div class="panel-heading">HEALTHCARE</div>
       <div class="panel-body">
-<h1>Income 9</h1>
-
-Size of household
-(n) Household members have been reported. If this is incorrect, please go back and edit the number of household members.
-Edit CHILDREN in household Edit ADULTS in household
-￼￼SSN of Adult Household Member
-Please give the last four digits of the Social Security Number of the Primary Wage Earner or another Adult Household Member
-LAST (4) Digits of SSN # Check if no SSN
-￼￼￼￼￼
-
+<h1>HEALTHCARE</h1>
 
 <div class="form-group row">
 <div class="inline-block">
   	<div class="clearfix"> 
 			<div class="btn-group inline pull-right" data-toggle="buttons-checkbox">
-			<a ui-sref="form.income8" class="btn btn-info">
+			<a ui-sref="#" class="btn btn-info">
       		<span class="glyphicon glyphicon glyphicon-backward"></span>Back</a>
 
 			<a ui-sref="#" class="btn btn-info">
 			Save<span class="glyphicon glyphicon glyphicon-save"></span>
 			</a>
-			<a ui-sref="form.review" class="btn btn-info">
+			<a ui-sref="#" class="btn btn-info">
 			Continue<span class="glyphicon glyphicon-forward"></span>
 			</a>
 		</div>
