--- a/public/views/form-profile.html
+++ b/public/views/form-profile.html
@@ -8,28 +8,29 @@
     </div>
 
     <div class="col-xs-9 panel-default">
-      <div class="panel-heading">INCOME</div>
+      <div class="panel-heading">PROFILE</div>
       <div class="panel-body">
-<h1>Income 6</h1>
+<label>PROFILE</label>
+
+
+
 
 <div class="form-group row">
 <div class="inline-block">
   	<div class="clearfix"> 
 			<div class="btn-group inline pull-right" data-toggle="buttons-checkbox">
-			<a ui-sref="form.income5" class="btn btn-info">
-      		<span class="glyphicon glyphicon glyphicon-backward"></span>Back</a>
+			<a ui-sref="#" class="btn btn-info">
+			<span class="glyphicon glyphicon glyphicon-backward"></span>
+			Back
+			</a>
 
 			<a ui-sref="#" class="btn btn-info">
-			Save<span class="glyphicon glyphicon glyphicon-save"></span>
-			</a>
-			<a ui-sref="form.income7" class="btn btn-info">
-			Continue<span class="glyphicon glyphicon-forward"></span>
+			Continue<span class="glyphicon glyphicon-circle-arrow-right"></span>
 			</a>
 		</div>
 	</div>
 	</div>
 </div>
-
   </div>
       </div>
     </div>
