--- a/public/views/form.html
+++ b/public/views/form.html
@@ -2,32 +2,27 @@
  <div class="container-fluid navbarContainer">
   <div class="navbar-header">
     <a class="navbar-brand" href="#">
-      <span><img alt="Brand" id="usdaLogo" src="../img/usda.png"></span>
+      <span><<!-- img alt="Brand" id="usdaLogo" src="#"> -->LOGO HERE</span>
     </a>
   </div>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right" id="progressHeader">
 
       <li><a ui-sref-active="active" ui-sref="form.welcome"><span>1</span> Welcome</a></li>
-      <li><a ui-sref-active="active" ui-sref="form.statements"><span>2</span> Statements</a></li>
-      <li><a ui-sref-active="active" ui-sref="form.adultContactInfo1"><span>3</span> Adult Contact <br>Info</a></li>
-      
-      <li><a ui-sref-active="active" ui-sref="form.adultContactInfo2"><span class="navCircle"></span></a></li>
-      <!-- <li><div id="navCircle"><a ui-sref-active="active" ui-sref="form.adultContactInfo2"></a></div></li> -->
+      <li><a ui-sref-active="active" ui-sref="form.profile"><span>2</span> Profile</a></li>
+      <li><a ui-sref-active="active" ui-sref="form.education"><span>3</span> Education &<br>Job Training</a></li>
+    
 
-      <li><a ui-sref-active="active" ui-sref="form.assistanceProgram1"><span>4</span> Assistant <br>Programs</a></li>
+      <li><a ui-sref-active="active" ui-sref="form.veteranmentornetwork"><span>4</span> Veteran <br>Mentor Network</a></li>
 
-      <li><a ui-sref-active="active" ui-sref="form.assistanceProgram2"><span class="navCircle"></span></a></li>
 
-      <li><a ui-sref-active="active" ui-sref="form.childStatus1"><span>5</span> Status of <br>Children</a></li>
+      <li><a ui-sref-active="active" ui-sref="form.jobsearch"><span>5</span> Job <br>Search</a></li>
 
-      <li><a ui-sref-active="active" ui-sref="form.childStatus2"><span class="navCircle"></span></a></li>
+      <li><a ui-sref-active="active" ui-sref="form.entrepreneurship"><span>6</span> Veteran <br>Entrepreneurship</a></li>
 
-      <li><a ui-sref-active="active" ui-sref="form.childrenInHousehold1"><span>6</span> Children in <br>Household</a></li>
-
-      <li><a ui-sref-active="active" ui-sref="form.adultsInHousehold1"><span>7</span> Adults in <br>Household</a></li>
-      <li><a ui-sref-active="active" ui-sref="form.income1"><span>8</span> Income</a></li>
-      <li><a ui-sref-active="active" ui-sref="form.review"><span>9</span> Review & Submit</a></li>
+      <li><a ui-sref-active="active" ui-sref="form.housing"><span>7</span> Housing <br>Resources</a></li>
+      <li><a ui-sref-active="active" ui-sref="form.healthcare"><span>8</span> Healthcare</a></li>
+  
 
       <li><a ui-sref-active="active" ui-sref="#">Hi {{ currentUser.username }}</a></li>
       <li><a ui-sref-active="active" ui-sref="#"> Help</a></li>
