--- a/public/views/form-entrepreneur.html
+++ b/public/views/form-entrepreneur.html
@@ -8,23 +8,24 @@
     </div>
 
     <div class="col-xs-9 panel-default">
-      <div class="panel-heading">{{title}}</div>
+      <div class="panel-heading">ENTREPRENEURSHIP</div>
       <div class="panel-body">
-<h1>Income 7</h1>
+
+
 
 <div class="form-group row">
 <div class="inline-block">
   	<div class="clearfix"> 
 			<div class="btn-group inline pull-right" data-toggle="buttons-checkbox">
-			<a ui-sref="form.income6" class="btn btn-info">
-      		<span class="glyphicon glyphicon glyphicon-backward"></span>Back</a>
+            <a ui-sref="#" class="btn btn-info">
+            <span class="glyphicon glyphicon glyphicon-backward"></span>Back</a>
 
 			<a ui-sref="#" class="btn btn-info">
 			Save<span class="glyphicon glyphicon glyphicon-save"></span>
 			</a>
-			<a ui-sref="form.income8" class="btn btn-info">
-			Continue<span class="glyphicon glyphicon-forward"></span>
-			</a>
+        <a ui-sref="#" class="btn btn-info">
+      Continue<span class="glyphicon glyphicon-forward"></span>
+      </a>
 		</div>
 	</div>
 	</div>
