--- a/public/views/form-housing.html
+++ b/public/views/form-housing.html
@@ -8,26 +8,29 @@
     </div>
 
     <div class="col-xs-9 panel-default">
-      <div class="panel-heading">{{title}}</div>
+      <div class="panel-heading">HOUSING</div>
       <div class="panel-body">
-<div class="container-fluid">
-
-</div>
-
+      <h1>Housing</h1>
 
 <div class="form-group row">
 <div class="inline-block">
   	<div class="clearfix"> 
 			<div class="btn-group inline pull-right" data-toggle="buttons-checkbox">
+            <a ui-sref="#" class="btn btn-info">
+            <span class="glyphicon glyphicon glyphicon-backward"></span>Back</a>
 
 			<a ui-sref="#" class="btn btn-info">
-			Continue<span class="glyphicon glyphicon-circle-arrow-right"></span>
+			Save<span class="glyphicon glyphicon glyphicon-save"></span>
 			</a>
+		<!-- 	<a ui-sref="form.income5" class="btn btn-info">
+			Continue<span class="glyphicon glyphicon-forward"></span>
+			</a> -->
 		</div>
 	</div>
 	</div>
 </div>
-      </div>
+
+  </div>
       </div>
     </div>
   </div>
