--- a/public/views/form-vetmentor.html
+++ b/public/views/form-vetmentor.html
@@ -8,33 +8,17 @@
     </div>
 
     <div class="col-xs-9 panel-default">
-      <div class="panel-heading">INCOME</div>
+      <div class="panel-heading">VET MENTOR</div>
       <div class="panel-body">
-<h3>Child Income</h3>
-<p>Sometimes a child in the household can earn an income. If any children in the household earn income, please report the TOTAL income earned by all children in the household</p>
+<h3>VET MENTOR</h3>
 
-<div class="col-md-10-offset-1">
-<table style="width:100%">
-  <tr>
-    <th>CHILDREN IN HOUSEHOLD</th>
-    <th>TOTAL INCOME REPORTED FOR ALL CHILDREN IN HOUSEHOLD</th>    
-    <th>FREQUENCY</th>
-  </tr>
-  <tr ng-repeat="child in children">
-    <td>{{child.firstname}} {{child.lastname}}</td>
-    <td>500</td>    
-    <td>Weekly</td>
-    <td><a ui-sref="form.income3"><button>Report Income</button></a></td>
-  </tr>
- 
-</table>
 </div>
 
 <div class="form-group row">
 <div class="inline-block">
   	<div class="clearfix"> 
 			<div class="btn-group inline pull-right" data-toggle="buttons-checkbox">
-          <a ui-sref="form.adultsInHousehold1" class="btn btn-info">
+          <a ui-sref="#" class="btn btn-info">
       <span class="glyphicon glyphicon glyphicon-backward"></span>
       Back
       </a>
@@ -42,7 +26,7 @@
 			<a ui-sref="#" class="btn btn-info">
 			Save<span class="glyphicon glyphicon glyphicon-save"></span>
 			</a>
-			<a ui-sref="form.income3" class="btn btn-info">
+			<a ui-sref="#" class="btn btn-info">
 			Continue<span class="glyphicon glyphicon-forward"></span>
 			</a>
 		</div>
