--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,7 +1,7 @@
- <div class="test">
+<!--  <div class="test">
  	<vid-bg resources="resources" poster="poster" full-screen="fullScreen" muted="muted" z-index="zIndex" play-info="playInfo" pause-play="pausePlay"></vid-bg>
- </div>
- <div class="container test">
+ </div> -->
+ <div class="container">
  	<form class="form-signin">
  		<center>
  			<!-- <img id="logo" src="../img/lime.png"> -->
@@ -10,7 +10,7 @@
  			<label for="inputPassword" class="sr-only">Password</label>
  			<input placeholder="password" ng-model="user.password" type="password" class="form-control" required>
  			<button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login(user)">Login</button>
- 			<p>Click Here to <a href="#signup">Sign Up</a> for Lunch Program</p>
+ 			<p>Click Here to <a href="#signup">Sign Up</a> for Vet Connect</p>
  		</center>
  		</form>
  </div> <!-- /container -->
