Added events page

--- a/public/views/form.html
+++ b/public/views/form.html
@@ -22,6 +22,7 @@
 
       <li><a ui-sref-active="active" ui-sref="form.housing"><span>7</span> Housing <br>Resources</a></li>
       <li><a ui-sref-active="active" ui-sref="form.healthcare"><span>8</span> Healthcare</a></li>
+      <li><a ui-sref-active="active" ui-sref="form.events"><span>8</span> Events</a></li>
   
 
       <li><a ui-sref-active="active" ui-sref="#">Hi {{ currentUser.username }}</a></li>
